Fixing too large MathJax font in hover-overs.

--- a/CalcZ-style.css
+++ b/CalcZ-style.css
@@ -438,7 +438,7 @@ img.cover {
 }
 
 .mcanswer {
-  font-size: 0.1vw;
+  font-size: 12pt;
   color: white;
   border: 0px solid #4CAF50;
 }
